--- a/style.css
+++ b/style.css
@@ -33,3 +33,32 @@
 .shadow2:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
+.dropbtn {
+    background-color: white;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content a {
+    color: #442A00;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border: #442A00;
+  }
+  .dropdown-content a:hover {background-color: #FFEEA7;}
+    .dropdown:hover .dropdown-content {display: block;}
+  .dropdown:hover .dropbtn {background-color: #FFEEA7;}
